--- a/style.css
+++ b/style.css
@@ -122,9 +122,9 @@ ul, li, a {
     left: 0;
     width: 100%;
     height: 100%;
-    backdrop-filter: blur(10px); /* Apply blur effect to background */
-    z-index: 999; /* Ensure blur background is behind navbar */
-    pointer-events: none; /* Allow clicks to pass through the blur background */
+    backdrop-filter: blur(10px); 
+    z-index: 999; 
+    pointer-events: none;
 }
 
 
@@ -144,7 +144,7 @@ ul, li, a {
     left: 0;
     width: 100%;
     height: 100%;
-    background-image: url('your-video-file.mp4');
+    background-image: url('Downloadd.mp4');
     background-size: cover;
     background-position: center;
     animation: playVideo 20s infinite alternate;
